<resources>
    <string name="app_name">AF Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_shop">Welcome to our shop</string>
    <string name="shop_shoes">Shop Shoes</string>
    <string name="shop_jeans">Shop Jeans</string>
    <string name="shop_jeans_men">Shop Men\'s Jeans</string>
    <string name="shop_jeans_women">Shop Women\'s Jeans</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="sale">Sale</string>
</resources>