<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:orientation="vertical"
    tools:context=".JeansMen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/shop_jeans_men"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/men_black_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/black"
            android:text="@string/black"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/men_blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/blue"
            android:textSize="25sp" />

        <Button
            android:id="@+id/men_sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/sale"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/men_jeans_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/jeans_men_intro" />
</LinearLayout>